--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Root Color Scheme */
 :root {
-  --primary: #002855;
-  --accent: #ffd100;
+  --primary: #09268a;
+  --accent: #ffc61e;
   --background: #f9f9f9;
   --text: #333;
 }
